added DepenseType bean and its services

--- a/app/src/main/res/layout/activity_depense_create.xml
+++ b/app/src/main/res/layout/activity_depense_create.xml
@@ -9,119 +9,121 @@
 
     <EditText
         android:id="@+id/montant"
-        android:layout_width="308dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginStart="38dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="@string/montant_dh"
         android:inputType="numberDecimal"
-        app:layout_constraintBottom_toTopOf="@+id/projet_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/error_depense" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/projet_spinner"
-        android:layout_width="308dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginStart="38dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/societe_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/montant" />
 
     <Spinner
         android:id="@+id/societe_spinner"
-        android:layout_width="308dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginStart="38dp"
-        app:layout_constraintBottom_toTopOf="@+id/date_depense"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/projet_spinner" />
 
     <EditText
         android:id="@+id/date_depense"
-        android:layout_width="308dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="13dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginStart="38dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:focusable="false"
         android:hint="@string/date_jj_mm_aaaa"
         android:inputType="date"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/heur_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/societe_spinner" />
 
     <EditText
         android:id="@+id/heur_depense"
-        android:layout_width="308dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginStart="38dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:focusable="false"
         android:hint="@string/heure_hh_mm"
         android:inputType="time"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/commentaire_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date_depense" />
 
-    <EditText
-        android:id="@+id/commentaire_depense"
-        android:layout_width="308dp"
-        android:layout_height="74dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginStart="38dp"
+    <Spinner
+        android:id="@+id/depense_type_spinner"
+        android:layout_width="0dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/commentaire"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/ajouter_depense"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/create_depense_type_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heur_depense" />
 
     <Button
+        android:id="@+id/create_depense_type_btn"
+        android:layout_width="80dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/create"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/heur_depense" />
+
+    <Button
         android:id="@+id/ajouter_depense"
-        android:layout_width="289dp"
+        android:layout_width="0dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="47dp"
-        android:layout_marginStart="48dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/rounded_button"
         android:onClick="createDepense"
         android:text="@string/add"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentaire_depense" />
+        app:layout_constraintTop_toBottomOf="@+id/depense_type_spinner" />
 
     <TextView
         android:id="@+id/error_depense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="17dp"
         android:textAlignment="center"
         android:textColor="@color/colorError"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/montant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
