--- a/app/src/main/res/layout/depense_edit_popup.xml
+++ b/app/src/main/res/layout/depense_edit_popup.xml
@@ -41,6 +41,7 @@
         android:inputType="date"
         app:layout_constraintBottom_toTopOf="@+id/heur_edit"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/montant_edit" />
 
@@ -48,31 +49,16 @@
         android:id="@+id/heur_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
         android:layout_marginEnd="71dp"
         android:layout_marginStart="72dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
         android:hint="@string/heure"
         android:inputType="time"
-        app:layout_constraintBottom_toTopOf="@+id/commentaire_edit"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date_edit" />
-
-    <EditText
-        android:id="@+id/commentaire_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginStart="72dp"
-        android:ems="10"
-        android:hint="@string/commentaire"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/button_edit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heur_edit" />
 
     <Button
         android:id="@+id/button_edit"
@@ -81,12 +67,13 @@
         android:layout_marginBottom="62dp"
         android:layout_marginEnd="71dp"
         android:layout_marginStart="71dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/rounded_button"
         android:text="@string/update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentaire_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/heur_edit" />
 
     <ImageButton
         android:id="@+id/dismiss_edit"
