--- a/app/src/main/res/layout/depense_info_popup.xml
+++ b/app/src/main/res/layout/depense_info_popup.xml
@@ -162,7 +162,7 @@
         android:text="@string/g_stion_de_projet_et_de_societes_android"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/commentaire_popup"
+        app:layout_constraintBottom_toTopOf="@+id/type_depense_popup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10" />
 
@@ -184,20 +184,20 @@
         android:layout_marginBottom="56dp"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="12dp"
-        android:text="@string/commentaire"
+        android:text="Type de depense"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/commentaire_popup"
+        app:layout_constraintEnd_toStartOf="@+id/type_depense_popup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
-        android:id="@+id/commentaire_popup"
+        android:id="@+id/type_depense_popup"
         android:layout_width="179dp"
         android:layout_height="81dp"
         android:layout_marginEnd="3dp"
-        android:text="@string/type_whatever_come_to_your_mind_in_this_text_area"
+        android:text="@string/type_de_depense"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
