--- a/app/src/main/res/layout/item_depense_list.xml
+++ b/app/src/main/res/layout/item_depense_list.xml
@@ -32,13 +32,14 @@
         android:layout_width="196dp"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="42dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:text="@string/_85500"
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/depense_date" />
+        app:layout_constraintStart_toEndOf="@+id/type_depense"
+        app:layout_constraintTop_toBottomOf="@+id/depense_heur" />
 
     <TextView
         android:id="@+id/depense_seeMore"
@@ -77,6 +78,17 @@
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/depense_date"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/type_depense"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/type_de_depense"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/depense_date" />
 </android.support.constraint.ConstraintLayout>
 
 
