--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -118,11 +117,11 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="167dp"
-        android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
@@ -190,9 +189,9 @@
                 <ImageView
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:background="@drawable/cerclebackgroundyello"
+                    android:background="@drawable/cerclebackgroundorange"
                     android:padding="10dp"
-                    android:src="@drawable/ic_assignment_black_24dp" />
+                    android:src="@drawable/ic_schedule_black_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -220,8 +219,9 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="156dp"
+        android:layout_height="167dp"
         android:clipToPadding="false"
         android:gravity="center"
         android:orientation="horizontal"
@@ -231,27 +231,72 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/statistiqueCardView"
-            android:layout_width="340dp"
-            android:layout_height="150dp"
+            android:id="@+id/dashboardCardView"
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            android:onClick="testStatistics">
+            android:onClick="seeDashboard">
 
             <LinearLayout
-
-                android:layout_width="339dp"
-                android:layout_height="151dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:background="@drawable/cerclebackgroundpurple"
+                    android:background="@drawable/cerclebackgroundbrown"
                     android:padding="10dp"
-                    android:src="@drawable/ic_show_chart_black_24dp" />
+                    android:src="@drawable/ic_dashboard_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/dashbord"
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="10dp"
+                    android:background="@color/lightGrey" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="@string/see_the_dashboard"
+                    android:textColor="@android:color/darker_gray" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/statististiqueCardView"
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClick="testStatistics">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:background="@drawable/cerclebackgroundaccent"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_pie_chart_black_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -276,7 +321,66 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
-
-
     </LinearLayout>
+
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="156dp"-->
+    <!--android:clipToPadding="false"-->
+    <!--android:gravity="center"-->
+    <!--android:orientation="horizontal"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintHorizontal_bias="0.0"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout2">-->
+
+    <!--<android.support.v7.widget.CardView-->
+    <!--android:id="@+id/statistiqueCardView"-->
+    <!--android:layout_width="340dp"-->
+    <!--android:layout_height="150dp"-->
+    <!--android:layout_margin="10dp"-->
+    <!--android:clickable="true"-->
+    <!--android:foreground="?android:attr/selectableItemBackground"-->
+    <!--android:onClick="testStatistics">-->
+
+    <!--<LinearLayout-->
+
+    <!--android:layout_width="339dp"-->
+    <!--android:layout_height="151dp"-->
+    <!--android:gravity="center"-->
+    <!--android:orientation="vertical">-->
+
+    <!--<ImageView-->
+    <!--android:layout_width="64dp"-->
+    <!--android:layout_height="64dp"-->
+    <!--android:background="@drawable/cerclebackgroundpurple"-->
+    <!--android:padding="10dp"-->
+    <!--android:src="@drawable/ic_show_chart_black_24dp" />-->
+
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="10dp"-->
+    <!--android:text="@string/statistics"-->
+    <!--android:textStyle="bold" />-->
+
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1dp"-->
+    <!--android:layout_margin="10dp"-->
+    <!--android:background="@color/lightGrey" />-->
+
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:gravity="center"-->
+    <!--android:padding="5dp"-->
+    <!--android:text="@string/view_the_statistics"-->
+    <!--android:textColor="@android:color/darker_gray" />-->
+
+    <!--</LinearLayout>-->
+    <!--</android.support.v7.widget.CardView>-->
+
+
+    <!--</LinearLayout>-->
 </android.support.constraint.ConstraintLayout>
