Addad change password, edit profile and attribute nbrConnection to user

--- a/app/src/main/res/layout/activity_depense_dashboard.xml
+++ b/app/src/main/res/layout/activity_depense_dashboard.xml
@@ -92,13 +92,15 @@
 
     <TextView
         android:id="@+id/error_depense_dashboard"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="30dp"
+        android:textAlignment="center"
         android:textColor="@color/colorError"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/dashboard_depense_societe_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
