--- a/app/src/main/res/layout/activity_temps_dashboard.xml
+++ b/app/src/main/res/layout/activity_temps_dashboard.xml
@@ -26,14 +26,14 @@
         android:layout_marginBottom="22dp"
         android:layout_marginEnd="68dp"
         android:layout_marginStart="68dp"
-        app:layout_constraintBottom_toTopOf="@+id/dashboard_temps_date_max"
+        app:layout_constraintBottom_toTopOf="@+id/dashboard_temps_date_min"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dashboard_temps_societe_spinner" />
 
 
     <EditText
-        android:id="@+id/dashboard_temps_date_min"
+        android:id="@+id/dashboard_temps_date_max"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="57dp"
@@ -46,10 +46,10 @@
         app:layout_constraintBottom_toTopOf="@+id/dashboard_temps_recherche_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dashboard_temps_date_max" />
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_temps_date_min" />
 
     <EditText
-        android:id="@+id/dashboard_temps_date_max"
+        android:id="@+id/dashboard_temps_date_min"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="25dp"
@@ -59,7 +59,7 @@
         android:focusable="false"
         android:hint="Date Min."
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/dashboard_temps_date_min"
+        app:layout_constraintBottom_toTopOf="@+id/dashboard_temps_date_max"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dashboard_temps_projet_spinner" />
@@ -72,24 +72,54 @@
         android:layout_marginEnd="68dp"
         android:layout_marginStart="68dp"
         android:background="@drawable/rounded_button"
+        android:onClick="rechercheTemps"
         android:text="Recherche"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dashboard_temps_date_min" />
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_temps_date_max" />
 
     <TextView
         android:id="@+id/error_temps_dashboard"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="53dp"
-        android:layout_marginEnd="88dp"
-        android:layout_marginStart="89dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="26dp"
+        android:textAlignment="center"
         android:textColor="@color/colorError"
         app:layout_constraintBottom_toTopOf="@+id/dashboard_temps_societe_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/clear_date_min_temps"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/dashboard_temps_date_min"
+        app:layout_constraintStart_toEndOf="@+id/dashboard_temps_date_min"
+        app:layout_constraintTop_toTopOf="@+id/dashboard_temps_date_min"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@android:drawable/btn_dialog" />
+
+    <ImageButton
+        android:id="@+id/clear_date_max_temps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/dashboard_temps_date_max"
+        app:layout_constraintStart_toEndOf="@+id/dashboard_temps_date_max"
+        app:layout_constraintTop_toTopOf="@+id/dashboard_temps_date_max"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/btn_dialog" />
 
 </android.support.constraint.ConstraintLayout>
