--- a/app/src/main/res/layout/activity_tache_create.xml
+++ b/app/src/main/res/layout/activity_tache_create.xml
@@ -19,13 +19,13 @@
         android:hint="@string/date_jj_mm_aaaa"
         android:inputType="date"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/heur_tache"
+        app:layout_constraintBottom_toTopOf="@+id/heure_debut_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/error_tache" />
 
     <EditText
-        android:id="@+id/heur_tache"
+        android:id="@+id/heure_debut_tache"
         android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="18dp"
@@ -34,28 +34,30 @@
         android:layout_marginTop="14dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="@string/heure_hh_mm"
+        android:hint="@string/heure_debut"
         android:inputType="time"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/duree_tache"
+        app:layout_constraintBottom_toTopOf="@+id/heure_fin_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date_tache" />
 
     <EditText
-        android:id="@+id/duree_tache"
+        android:id="@+id/heure_fin_tache"
         android:layout_width="308dp"
         android:layout_height="41dp"
         android:layout_marginBottom="12dp"
         android:layout_marginEnd="38dp"
         android:layout_marginStart="38dp"
         android:ems="10"
-        android:hint="@string/dur_e_heurs"
-        android:inputType="numberDecimal"
+        android:focusable="false"
+        android:hint="@string/heure_fin"
+        android:inputType="time"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/projet_spinner_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heur_tache" />
+        app:layout_constraintTop_toBottomOf="@+id/heure_debut_tache" />
 
     <Spinner
         android:id="@+id/projet_spinner_tache"
@@ -68,7 +70,7 @@
         app:layout_constraintBottom_toTopOf="@+id/societe_spinner_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/duree_tache" />
+        app:layout_constraintTop_toBottomOf="@+id/heure_fin_tache" />
 
     <Spinner
         android:id="@+id/societe_spinner_tache"
@@ -106,7 +108,7 @@
         android:layout_marginEnd="47dp"
         android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
-        android:onClick="createDepense"
+        android:onClick="createTache"
         android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
