--- a/app/src/main/res/layout/tache_edit_popup.xml
+++ b/app/src/main/res/layout/tache_edit_popup.xml
@@ -19,29 +19,30 @@
         android:ems="10"
         android:hint="@string/date"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/heur_edit_tache"
+        app:layout_constraintBottom_toTopOf="@+id/heur_debut_edit_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/heur_edit_tache"
+        android:id="@+id/heur_debut_edit_tache"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:layout_marginEnd="43dp"
         android:layout_marginStart="46dp"
         android:ems="10"
-        android:hint="@string/heure"
+        android:focusable="false"
+        android:hint="@string/heure_debut"
         android:inputType="time"
-        app:layout_constraintBottom_toTopOf="@+id/nbrheur_edit_tache"
+        app:layout_constraintBottom_toTopOf="@+id/heur_fin_edit_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date_edit_tache" />
 
 
     <EditText
-        android:id="@+id/nbrheur_edit_tache"
+        android:id="@+id/heur_fin_edit_tache"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -49,16 +50,15 @@
         android:layout_marginStart="46dp"
         android:cursorVisible="true"
         android:ems="10"
-        android:focusable="true"
+        android:focusable="false"
         android:focusableInTouchMode="true"
-        android:hint="@string/nombre_heurs"
-        android:inputType="number"
-        android:text=""
+        android:hint="@string/heure_fin"
+        android:inputType="time"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_edit_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heur_edit_tache" />
+        app:layout_constraintTop_toBottomOf="@+id/heur_debut_edit_tache" />
 
 
     <EditText
@@ -75,7 +75,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button_edit_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nbrheur_edit_tache" />
+        app:layout_constraintTop_toBottomOf="@+id/heur_fin_edit_tache" />
 
     <Button
         android:id="@+id/button_edit_tache"
@@ -103,7 +103,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/btn_dialog" />
-
 
 
 </android.support.constraint.ConstraintLayout>
