--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -191,7 +191,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/cerclebackgroundorange"
                     android:padding="10dp"
-                    android:src="@drawable/ic_schedule_black_24dp" />
+                    app:srcCompat="@drawable/ic_schedule_black_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -250,7 +250,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/cerclebackgroundbrown"
                     android:padding="10dp"
-                    android:src="@drawable/ic_dashboard_black_24dp" />
+                    app:srcCompat="@drawable/ic_dashboard_black_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -296,7 +296,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/cerclebackgroundaccent"
                     android:padding="10dp"
-                    android:src="@drawable/ic_pie_chart_black_24dp" />
+                    app:srcCompat="@drawable/ic_pie_chart_black_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
