--- a/app/src/main/res/layout/activity_societe_create.xml
+++ b/app/src/main/res/layout/activity_societe_create.xml
@@ -28,7 +28,7 @@
 
     <EditText
         android:id="@+id/textViewRaisonSociale"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="42dp"
@@ -43,7 +43,7 @@
 
     <EditText
         android:id="@+id/textViewDate"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="42dp"
@@ -74,17 +74,17 @@
         android:id="@+id/create_manager_btn"
         android:layout_width="80dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="37dp"
-        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/rounded_button"
         android:text="@string/create"
-        app:layout_constraintBottom_toTopOf="@+id/create_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/manager_spinner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/manager_spinner" />
+        app:layout_constraintTop_toTopOf="@+id/manager_spinner" />
 
     <Button
         android:id="@+id/create_btn"
-        android:layout_width="289dp"
+        android:layout_width="0dp"
         android:layout_height="51dp"
         android:layout_marginBottom="131dp"
         android:layout_marginEnd="107dp"
