--- a/app/src/main/res/layout/projet_info_popup.xml
+++ b/app/src/main/res/layout/projet_info_popup.xml
@@ -21,17 +21,15 @@
 
     <TextView
         android:id="@+id/societe_popup_projet"
-        android:layout_width="181dp"
+        android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginBottom="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="13dp"
         android:text="Sharpinfo societe for infomation"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/description_popup_projet"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -39,12 +37,12 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="90dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
         android:text="DHs"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/budget_popup_pojet"
         app:layout_constraintTop_toBottomOf="@+id/date_popup_projet" />
 
     <TextView
@@ -52,35 +50,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
         android:text="85500"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/date_popup_projet" />
 
     <TextView
         android:id="@+id/date_popup_projet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="91dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
         android:text="08-05-2018"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/titre_popup_projet" />
 
     <TextView
         android:id="@+id/titre_popup_projet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="45dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="33dp"
         android:text="Géstion du projet"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -88,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="10dp"
         android:text="Date de début :"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -146,16 +146,14 @@
 
     <TextView
         android:id="@+id/description_popup_projet"
-        android:layout_width="179dp"
+        android:layout_width="wrap_content"
         android:layout_height="64dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="4dp"
         android:layout_marginStart="11dp"
         android:text="Type whatever come to your mind in this text area"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/consulter_taches_popup"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/societe_popup_projet" />
 
