modified strings to french

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginStart="60dp"
         android:ems="10"
-        android:hint="Old Password"
+        android:hint="Ancien mot de passe"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/new_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginStart="60dp"
         android:ems="10"
-        android:hint="New Password"
+        android:hint="Nouveau mot de passe"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/confirm_new_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginStart="60dp"
         android:ems="10"
-        android:hint="Confirm Password"
+        android:hint="Confirmez mot de passe"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/save_change_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginStart="60dp"
         android:background="@drawable/rounded_button"
-        android:text="Save"
+        android:text="Sauvegarder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:layout_marginEnd="100dp"
         android:layout_marginStart="99dp"
         android:layout_marginTop="44dp"
-        android:text="Change Password"
+        android:text="Changer Mot de passe"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/change_password_error"
